<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Receiver">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_btn"
            android:text="Subscribe" />

        <Button
            android:id="@+id/btn_unsubscribe"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_btn"
            android:text="Unsubscribe" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_btn"
            android:text="Disconnect" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table">

        <TextView
            android:id="@+id/describtion1"
            android:layout_width="407dp"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:text="Received Data:"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dataReceived"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/custom_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/describtion2"
            android:layout_width="407dp"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:text="Publish data:"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_publish"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_tv" />

    </LinearLayout>


    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:stretchColumns="0,1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#000000"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="0dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="Connection"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="0dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="Topic "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:id="@+id/tableC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="0dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="13dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tableT"
                android:text="unsubscribed"
                android:textSize="13dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="0dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_publish"
        android:background="@drawable/custom_btn"
        android:layout_width="154dp"
        android:layout_height="46dp"
        android:text="publish"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.232" />



</androidx.constraintlayout.widget.ConstraintLayout>